NIFI-1928: - Fixing UI action for bulk delete. - Removing registration form. - Fixing default visibility of the anonymous user warning.

--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/header.css
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/header.css
@@ -152,6 +152,7 @@ md-toolbar.md-small .md-toolbar-tools {
 /* styles for the status link */
 
 #anonymous-user-alert {
+    display: none;
     font-size: 12px;
 }
 
